# BlueBridgeCup-11-Province

./: .mxproject  CMakeLists.txt  HAL_06_LCD.ioc
Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal_gpio.c
Inc/: lcd.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
MDK-ARM/: HAL_06_LCD.uvguix.张亮亮  HAL_06_LCD.uvoptx  HAL_06_LCD.uvprojx  startup_stm32g431xx.lst
MDK-ARM/HAL_06_LCD/: HAL_06_LCD.axf  HAL_06_LCD.build_log.htm  HAL_06_LCD.hex  HAL_06_LCD.htm  HAL_06_LCD.lnp  HAL_06_LCD.map  HAL_06_LCD_HAL_06_LCD.dep  adc.crf  adc.d  delay.crf  delay.d  key.crf  key.d  lcd.crf  lcd.d  led.crf  led.d  main.crf  main.d  menu.crf  menu.d  pwm.crf  pwm.d  startup_stm32g431xx.d  stm32g4xx_hal.crf  stm32g4xx_hal.d  stm32g4xx_hal_adc.crf  stm32g4xx_hal_adc.d  stm32g4xx_hal_adc_ex.crf  stm32g4xx_hal_adc_ex.d  stm32g4xx_hal_cortex.crf  stm32g4xx_hal_cortex.d  stm32g4xx_hal_dma.crf  stm32g4xx_hal_dma.d  stm32g4xx_hal_dma_ex.crf  stm32g4xx_hal_dma_ex.d  stm32g4xx_hal_exti.crf  stm32g4xx_hal_exti.d  stm32g4xx_hal_flash.crf  stm32g4xx_hal_flash.d  (+31 more)
MDK-ARM/RTE/_HAL_06_LCD/: RTE_Components.h
Src/: ADC.c  ADC.h  LED.c  LED.h  key.c  key.h  lcd.c  main.c  menu.c  menu.h  pwm.c  pwm.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c  uart.c  uart.h
