cmake_minimum_required(VERSION 3.20)
project(HAL_06_LCD)

set(CMAKE_CXX_STANDARD 14)

include_directories(Drivers/CMSIS)
include_directories(Drivers/CMSIS/Device)
include_directories(Drivers/CMSIS/Device/ST)
include_directories(Drivers/CMSIS/Device/ST/STM32G4xx)
include_directories(Drivers/CMSIS/Device/ST/STM32G4xx/Include)
include_directories(Drivers/CMSIS/Device/ST/STM32G4xx/Source)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/STM32G4xx_HAL_Driver)
include_directories(Drivers/STM32G4xx_HAL_Driver/Inc)
include_directories(Drivers/STM32G4xx_HAL_Driver/Inc/Legacy)
include_directories(Drivers/STM32G4xx_HAL_Driver/Src)
include_directories(Inc)
include_directories(MDK-ARM)
include_directories(MDK-ARM/RTE)
include_directories(MDK-ARM/RTE/_HAL_06_LCD)
include_directories(Src)

add_executable(HAL_06_LCD
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g431xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g441xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g471xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g473xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g474xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g483xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g484xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32g4xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/stm32gbk1cb.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Include/system_stm32g4xx.h
        Drivers/CMSIS/Device/ST/STM32G4xx/Source/Templates/system_stm32g4xx.c
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armclang.h
        Drivers/CMSIS/Include/cmsis_compiler.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/cmsis_iccarm.h
        Drivers/CMSIS/Include/cmsis_version.h
        Drivers/CMSIS/Include/core_armv8mbl.h
        Drivers/CMSIS/Include/core_armv8mml.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm1.h
        Drivers/CMSIS/Include/core_cm23.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm33.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/CMSIS/Include/mpu_armv7.h
        Drivers/CMSIS/Include/mpu_armv8.h
        Drivers/CMSIS/Include/tz_context.h
        Drivers/STM32G4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32_assert_template.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_adc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_adc_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_comp.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_conf_template.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_cordic.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_cortex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_crc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_crc_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_cryp.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_cryp_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_dac.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_dac_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_def.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_dma.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_dma_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_exti.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_fdcan.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_flash.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_flash_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_flash_ramfunc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_fmac.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_gpio.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_gpio_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_hrtim.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_i2c.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_i2c_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_i2s.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_irda.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_irda_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_iwdg.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_lptim.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_nand.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_nor.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_opamp.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_opamp_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_pcd.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_pcd_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_pwr.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_pwr_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_qspi.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_rcc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_rcc_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_rng.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_rtc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_rtc_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_sai.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_sai_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_smartcard.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_smartcard_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_smbus.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_spi.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_spi_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_sram.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_tim.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_tim_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_uart.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_uart_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_usart.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_usart_ex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_wwdg.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_adc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_bus.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_comp.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_cordic.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_cortex.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_crc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_crs.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_dac.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_dma.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_dmamux.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_exti.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_fmac.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_fmc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_gpio.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_hrtim.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_i2c.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_iwdg.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_lptim.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_lpuart.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_opamp.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_pwr.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_rcc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_rng.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_rtc.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_spi.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_system.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_tim.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_ucpd.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_usart.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_usb.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_utils.h
        Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_ll_wwdg.h
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_adc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_adc_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_comp.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_cordic.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_cortex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_crc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_crc_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_cryp.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_cryp_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dac.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dac_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dma.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dma_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_exti.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_fdcan.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash_ramfunc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_fmac.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_gpio.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_hrtim.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_i2c.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_i2c_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_i2s.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_irda.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_iwdg.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_lptim.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_msp_template.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_nand.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_nor.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_opamp.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_opamp_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pcd.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pcd_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pwr.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pwr_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_qspi.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rng.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rtc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rtc_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_sai.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_sai_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_smartcard.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_smartcard_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_smbus.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_spi.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_spi_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_sram.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_tim.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_tim_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_timebase_tim_template.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_uart.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_uart_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_usart.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_usart_ex.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_wwdg.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_adc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_comp.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_cordic.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_crc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_crs.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_dac.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_dma.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_exti.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_fmac.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_fmc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_gpio.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_hrtim.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_i2c.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_lptim.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_lpuart.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_opamp.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_pwr.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_rcc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_rng.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_rtc.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_spi.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_tim.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_ucpd.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_usart.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_usb.c
        Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_ll_utils.c
        Inc/fonts.h
        Inc/lcd.h
        Inc/main.h
        Inc/stm32g4xx_hal_conf.h
        Inc/stm32g4xx_it.h
        MDK-ARM/DebugConfig/HAL_06_LCD_STM32G431RBTx.dbgconf
        MDK-ARM/HAL_06_LCD/delay.crf
        MDK-ARM/HAL_06_LCD/delay.d
        MDK-ARM/HAL_06_LCD/delay.o
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.axf
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.build_log.htm
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.hex
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.htm
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.lnp
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.map
        MDK-ARM/HAL_06_LCD/HAL_06_LCD.sct
        MDK-ARM/HAL_06_LCD/HAL_06_LCD_HAL_06_LCD.dep
        MDK-ARM/HAL_06_LCD/key.crf
        MDK-ARM/HAL_06_LCD/key.d
        MDK-ARM/HAL_06_LCD/key.o
        MDK-ARM/HAL_06_LCD/lcd.crf
        MDK-ARM/HAL_06_LCD/lcd.d
        MDK-ARM/HAL_06_LCD/lcd.o
        MDK-ARM/HAL_06_LCD/led.crf
        MDK-ARM/HAL_06_LCD/led.d
        MDK-ARM/HAL_06_LCD/led.o
        MDK-ARM/HAL_06_LCD/main.crf
        MDK-ARM/HAL_06_LCD/main.d
        MDK-ARM/HAL_06_LCD/main.o
        MDK-ARM/HAL_06_LCD/menu.crf
        MDK-ARM/HAL_06_LCD/menu.d
        MDK-ARM/HAL_06_LCD/menu.o
        MDK-ARM/HAL_06_LCD/pwm.crf
        MDK-ARM/HAL_06_LCD/pwm.d
        MDK-ARM/HAL_06_LCD/pwm.o
        MDK-ARM/HAL_06_LCD/startup_stm32g431xx.d
        MDK-ARM/HAL_06_LCD/startup_stm32g431xx.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_cortex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_cortex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_cortex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_dma.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_dma.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_dma.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_dma_ex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_dma_ex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_dma_ex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_exti.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_exti.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_exti.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash_ex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash_ex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash_ex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash_ramfunc.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash_ramfunc.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_flash_ramfunc.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_gpio.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_gpio.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_gpio.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_msp.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_msp.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_msp.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_pwr.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_pwr.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_pwr.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_pwr_ex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_pwr_ex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_pwr_ex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_rcc.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_rcc.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_rcc.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_rcc_ex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_rcc_ex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_rcc_ex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_tim.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_tim.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_tim.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_tim_ex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_tim_ex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_tim_ex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_uart.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_uart.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_uart.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_uart_ex.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_uart_ex.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_hal_uart_ex.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_it.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_it.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_it.o
        MDK-ARM/HAL_06_LCD/stm32g4xx_ll_pwr.crf
        MDK-ARM/HAL_06_LCD/stm32g4xx_ll_pwr.d
        MDK-ARM/HAL_06_LCD/stm32g4xx_ll_pwr.o
        MDK-ARM/HAL_06_LCD/system_stm32g4xx.crf
        MDK-ARM/HAL_06_LCD/system_stm32g4xx.d
        MDK-ARM/HAL_06_LCD/system_stm32g4xx.o
        MDK-ARM/HAL_06_LCD/uart.crf
        MDK-ARM/HAL_06_LCD/uart.d
        MDK-ARM/HAL_06_LCD/uart.o
        MDK-ARM/RTE/_HAL_06_LCD/RTE_Components.h
        Src/ADC.c
        Src/ADC.h
        Src/key.c
        Src/key.h
        Src/lcd.c
        Src/LED.c
        Src/LED.h
        Src/main.c
        Src/menu.c
        Src/menu.h
        Src/pwm.c
        Src/pwm.h
        Src/stm32g4xx_hal_msp.c
        Src/stm32g4xx_it.c
        Src/system_stm32g4xx.c
        Src/uart.c
        Src/uart.h)
